<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="banner_inicial">Banner inicial</string>
    <string name="brasil">Brasil</string>
    <string name="local">Recife</string>
    <string name="dias">2 dias</string>
    <string name="periodo">01/10 - 01/11 2019</string>
    <string name="preco">R$ 243,50</string>
    <string name="imagem_resumo_pacote">Imagem resumo pacote</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="mascara_para_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para pagamento:</string>
    <string name="valor_da_compra">Valor da compra</string>
    <string name="numero_do_cartao">Número do Cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_resumo">Confira o resumo da compra:</string>
    <string name="conteudo_banner">Conteudo banner @string/banner_inicial</string>
    <string name="imagem_do_pacote">Imagem do Pacote</string>
</resources>
